--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ function MM_swapImage() { //v3.0
         <td align="center" valign="middle">&nbsp;</td>
       </tr>
       <tr>
-        <td align="center" valign="middle"><p class="A4">日期:2018/04/25</p>
+        <td align="center" valign="middle"><p class="A4">日aaaaaaaaaaaaaa期:2018/04/25</p>
           <p class="A4">維護:04王維仁</p></td>
       </tr>
       <tr>
